fixed about section glitch

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -296,7 +296,7 @@
         <div class="about-tiles mobile">
           <AnimatedContainer class="about-tile-animated-container mobile">
             {{#animated-if (or this.isTileView (eq this.currentSection 'about')) duration=1000 use=this.transitionFade}}
-              <div class="about-tile mobile" onclick={{action "tileSelected" 'about'}}>
+              <div class="about-tile mobile" onclick={{action "tileSelectedMobile" 'about'}}>
                 <img class="about-tile-img-bg mobile" src="/images/code.jpg">
                 <img class="about-tile-img-text-1 mobile" src="/images/about.png">
               </div>
@@ -304,7 +304,7 @@
           </AnimatedContainer>
           <AnimatedContainer class="about-tile-animated-container mobile">
             {{#animated-if (or this.isTileView (eq this.currentSection 'career')) duration=1000 use=this.transitionFade}}
-              <div class="about-tile mobile" onclick={{action "tileSelected" 'career'}}>
+              <div class="about-tile mobile" onclick={{action "tileSelectedMobile" 'career'}}>
                 <img class="about-tile-img-bg mobile" src="/images/career.jpg">
                 <img class="about-tile-img-text-2 mobile" src="/images/career.png">
               </div>
@@ -312,7 +312,7 @@
           </AnimatedContainer>
           <AnimatedContainer class="about-tile-animated-container mobile">
             {{#animated-if (or this.isTileView (eq this.currentSection 'education')) duration=1000 use=this.transitionFade}}
-              <div class="about-tile mobile" onclick={{action "tileSelected" 'education'}}>
+              <div class="about-tile mobile" onclick={{action "tileSelectedMobile" 'education'}}>
                 <img class="about-tile-img-bg mobile" src="/images/education.jpg">
                 <img class="about-tile-img-text-3 mobile" src="/images/education.png">
               </div>
@@ -320,7 +320,7 @@
           </AnimatedContainer>
           <AnimatedContainer class="about-tile-animated-container mobile">
             {{#animated-if (or this.isTileView (eq this.currentSection 'awards')) duration=1000 use=this.transitionFade}}
-              <div class="about-tile mobile" onclick={{action "tileSelected" 'awards'}}>
+              <div class="about-tile mobile" onclick={{action "tileSelectedMobile" 'awards'}}>
                 <img class="about-tile-img-bg mobile" src="/images/awards.jpg">
                 <img class="about-tile-img-text-4 mobile" src="/images/awards.png">
               </div>
