--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -141,7 +141,7 @@ body {
 
 .body {
   overflow-x: hidden;
-  background-color: #ffeed4;
+  background-color: #fffcf7;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -329,6 +329,7 @@ body {
   justify-content: center;
   padding: 30px;
   box-shadow: 0px 0px 10px -4px rgba(0,0,0,0.75);
+  background-color: #fffcf7;
 }
 
 .about-content.mobile {
