--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -328,7 +328,7 @@ body {
   align-items: flex-start;
   justify-content: center;
   padding: 30px;
-  box-shadow: 0px 0px 10px -4px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 5px -4px rgba(0,0,0,0.75);
   background-color: #fffcf7;
 }
 
@@ -339,7 +339,7 @@ body {
   height: fit-content;
   flex-direction: column;
   padding: 10px;
-  z-index: 0;
+  margin-top: 20px;
 }
 
 .about-content-container {
