--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -65,8 +65,7 @@
                 	width="100%"
                 	height="100%">
                 	<p>
-                		<a href="/assets/cv.pdf">Download Curriculum Vitae</a>
-                		.
+                		<a href="/assets/cv.pdf">Download Curriculum Vitae</a>.
                 	</p>
                 </object>
               </p>
@@ -325,6 +324,14 @@
                   He has experience working in frontend, backend, android and desktop development.
                   <br><br>
                   He is passionate about building beautiful, responsive, and robust web applications.
+                  <object
+                  	type="application/pdf"
+                  	width="100%"
+                  	height="100%">
+                  	<p>
+                  		<a href="/assets/cv.pdf">Download Curriculum Vitae</a>.
+                  	</p>
+                  </object>
                 </p>
               </div>
             {{/animated-if}}
