--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -97,6 +97,10 @@ body {
   border-right: 1px solid #7d9ccf;
 }
 
+.nav-item.mobile {
+  width: 33%;
+}
+
 .active {
 
 }
@@ -106,13 +110,6 @@ body {
 }
 
 .nav-item:hover {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 110px;
-  text-decoration: none;
-  color: white;
   background-color: #5780c1;
 }
 
@@ -208,11 +205,11 @@ body {
 
 .about-tile {
   position: relative;
-  transition: transform .2s;
   height: 100%;
   width: 25%;
   box-shadow: 0px 4px 11px -4px rgba(0,0,0,0.75);
   overflow: hidden;
+  opacity: .9;
 }
 
 .about-tile.mobile {
@@ -230,6 +227,7 @@ body {
 
 .about-tile:hover {
   transform: scale(1.03);
+  opacity: 1;
 }
 
 .about-tile-title {
@@ -329,7 +327,10 @@ body {
   justify-content: center;
   padding: 30px;
   box-shadow: 0px 0px 5px -4px rgba(0,0,0,0.75);
-  background-color: #fffcf7;
+  background-color: white;
+  border-left: 1px solid #bababa;
+  border-right: 1px solid #bababa;
+  border-bottom: 1px solid #bababa;
 }
 
 .about-content.mobile {
@@ -340,6 +341,7 @@ body {
   flex-direction: column;
   padding: 10px;
   margin-top: 20px;
+  background-color: white;
 }
 
 .about-content-container {
@@ -369,6 +371,24 @@ body {
   color: #454545;
 }
 
+.about-content-link {
+  text-decoration: none;
+  background-color: #4287f5;
+  color: white;
+  height: 25px;
+  padding: 3px;
+  border: 1px solid #306cc9;
+  text-align: center;
+  border-radius: 3px;
+  font-weight: 300;
+  box-shadow: 0px 1px 7px -4px rgba(0,0,0,0.75);
+}
+
+.about-content-link:hover {
+  box-shadow: 0px 2px 9px -4px rgba(0,0,0,0.75);
+  background-color: #eb6963;
+}
+
 .about-content-text.mobile {
   color: #827e7e;
   width: 100%;
@@ -381,7 +401,7 @@ body {
 /* ==============================================TECH================================ */
 
 .tech-container {
-  height: calc(100vh - 140px);
+  height: calc(100vh - 120px);
   width: 100%;
   display: flex;
   align-items: center;
@@ -390,14 +410,40 @@ body {
 
 .thumbnail-container {
   height: 100px;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 15px;
+}
+
+.thumbnail-row.mobile {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+}
+
+.thumbnail-item {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 80px;
+  width: 80px;
+}
+
+.thumbnail-item.mobile {
+  height: 60px;
+  width: 60px;
+}
+
+.thumbnail-item:hover {
+  border: 1px solid #ACCEF7;
+  border-radius: 5px;
+  box-shadow: -3px 3px 9px -8px rgba(0,0,0,0.75);
 }
 
 .thumbnail-img {
-  width: 75px;
-  margin-left: 20px;
 }
 
 .thumbnail-img.mobile {
@@ -415,10 +461,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 20px;
+  margin-top: 10px;
 }
 
 .slideshow-content {
-  background-color: #f7f7f7;
+  background-color: white;
   height: 400px;
   width: 80%;
   display: flex;
@@ -458,15 +506,20 @@ body {
 .slideshow-details {
   display: flex;
   align-items: center;
+  min-width: 20%;
   width: 20%;
   height: 400px;
-  background-color: #f7f7f7;
+  background-color: #fcfcfc;
   border-left: 1px solid #c0c1c2;
+}
+
+.slideshow-details-container {
+  overflow: hidden;
 }
 
 .slideshow-details.mobile {
   width: 100%;
-  height: 150px;
+  max-height: 150px;
   border-top: 1px solid #c0c1c2;
   border-left: none;
   background-color: #fafafa;
@@ -483,7 +536,6 @@ body {
 .slideshow-title {
   font-size: 20px;
   color: #f7f2f2;
-  /* letter-spacing: 1px; */
   font-weight: 400;
   margin: 0;
   margin-top: 11px;
@@ -495,7 +547,6 @@ body {
 }
 
 .slideshow-img {
-  width: 400px;
 }
 
 .slideshow-img.mobile {
@@ -608,7 +659,7 @@ body {
 
 .seperator-line-left {
   border-bottom: 1px solid #bbb;
-  width: 42%;
+  min-width: 38%;
   box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
   margin-left: 20px;
   margin-bottom: 15px;
@@ -621,7 +672,7 @@ body {
 
 .seperator-line-right {
   border-bottom: 1px solid #bbb;
-  width: 42%;
+  min-width: 38%;
   box-shadow: 0px 2px 0px 0px rgba(186,182,186,1);
   margin-right: 20px;
   margin-bottom: 15px;
@@ -639,7 +690,9 @@ body {
 }
 
 .seperator-title.mobile {
-  font-size: 20px;
+  width: fit-content;
+  font-size: 18px;
+  white-space: nowrap;
 }
 
 .close {
