--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -52,56 +52,76 @@
         <AnimatedContainer class="about-content-animated-container">
           {{#animated-if (eq this.currentSection 'about') duration=750 use=this.transitionMove}}
             <div class="about-content">
-              <img class="about-content-img" src="/images/me.jpg">
-              <p class="about-content-text">
-                Shane is a freelance software and web developer from Dublin, Ireland.
-                <br><br>
-                He has experience working in frontend, backend, android and desktop development.
-                <br><br>
-                He is passionate about building beautiful, responsive, and robust web applications.
-                <br><br>
-                <a class="about-content-link" href="/assets/cv.pdf">Download CV</a>
-              </p>
+              <div class="about-content-header">
+                <img class="about-content-header-text" src="/images/about.png" width="100px">
+              </div>
+              <div class="about-content-container">
+                <img class="about-content-img" src="/images/me.jpg">
+                <p class="about-content-text">
+                  Shane is a freelance software and web developer from Dublin, Ireland.
+                  <br><br>
+                  He has experience working in frontend, backend, android and desktop development.
+                  <br><br>
+                  He is passionate about building beautiful, responsive, and robust web applications.
+                  <br><br>
+                  <a class="about-content-link" href="/assets/cv.pdf">Download CV</a>
+                </p>
+              </div>
             </div>
           {{/animated-if}}
           {{#animated-if (eq this.currentSection 'career') duration=750 use=this.transitionMove}}
             <div class="about-content">
-              <img class="about-content-img" src="/images/working.jpg">
-              <p class="about-content-text">
-                Shane has experience in both small startups and large corporations, working with a wide range of technologies.
-                <br><br>
-                He has built frontend applications for the largest salon booking software in the world.
-                <br><br>
-                He has worked on backend and database infrastructure for large banking multinationals.
-                <br><br>
-                He has also done many smaller projects (frontend + backend) for individuals and startup companies;
-              </p>
+              <div class="about-content-header">
+                <img class="about-content-header-text" src="/images/career.png" width="100px">
+              </div>
+              <div class="about-content-container">
+                <img class="about-content-img" src="/images/working.jpg">
+                <p class="about-content-text">
+                  Shane has experience in both small startups and large corporations, working with a wide range of technologies.
+                  <br><br>
+                  He has built frontend applications for the largest salon booking software in the world.
+                  <br><br>
+                  He has worked on backend and database infrastructure for large banking multinationals.
+                  <br><br>
+                  He has also done many smaller projects (frontend + backend) for individuals and startup companies;
+                </p>
+            </div>
             </div>
           {{/animated-if}}
           {{#animated-if (eq this.currentSection 'education') duration=750 use=this.transitionMove}}
             <div class="about-content">
-              <img class="about-content-img" src="/images/dcu.jpg">
-              <p class="about-content-text">
-                Shane graduated from Dublin City University in 2017 with an honours degree in Computer Science.
-                <br><br>
-                He specialized in wearable technology, machine translation and computer graphics.
-                <br><br>
-                He achieved a first class honours result and an award for his final year project.
-              </p>
+              <div class="about-content-header">
+                <img class="about-content-header-text" src="/images/education.png" width="100px">
+              </div>
+              <div class="about-content-container">
+                <img class="about-content-img" src="/images/dcu.jpg">
+                <p class="about-content-text">
+                  Shane graduated from Dublin City University in 2017 with an honours degree in Computer Science.
+                  <br><br>
+                  He specialized in wearable technology, machine translation and computer graphics.
+                  <br><br>
+                  He achieved a first class honours result and an award for his final year project.
+                </p>
+              </div>
             </div>
           {{/animated-if}}
           {{#animated-if (eq this.currentSection 'awards') duration=750 use=this.transitionMove}}
             <div class="about-content">
-              <img class="about-content-img" src="/images/openet.jpeg">
-              <p class="about-content-text">
-                Shane was awarded Most Innovative Project at the Dublin City University 2017 final year project expo.
-                <br><br>
-                Shane has built frontend applications for the largest salon booking software in the world.
-                <br><br>
-                His project was a wearable technology navigation system for cyclists consisting of an android app and an arduino which was fitted to a helmet, using a light system to direct the cyclist to their destination.
-                <br><br>
-                Shane received first class honours for the project as well as a new Ipad.
-              </p>
+              <div class="about-content-header">
+                <img class="about-content-header-text" src="/images/awards.png" width="100px">
+              </div>
+              <div class="about-content-container">
+                <img class="about-content-img" src="/images/openet.jpeg">
+                <p class="about-content-text">
+                  Shane was awarded Most Innovative Project at the Dublin City University 2017 final year project expo.
+                  <br><br>
+                  Shane has built frontend applications for the largest salon booking software in the world.
+                  <br><br>
+                  His project was a wearable technology navigation system for cyclists consisting of an android app and an arduino which was fitted to a helmet, using a light system to direct the cyclist to their destination.
+                  <br><br>
+                  Shane received first class honours for the project as well as a new Ipad.
+                </p>
+              </div>
             </div>
           {{/animated-if}}
         </AnimatedContainer>
