--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -431,15 +431,8 @@
                   He has experience working in frontend, backend, android and desktop development.
                   <br><br>
                   He is passionate about building beautiful, responsive, and robust web applications.
-                  <object
-                  	type="application/pdf"
-                  	width="100%"
-                  	height="100%">
-                  	<p>
-                  		<a href="/assets/cv.pdf">Download Curriculum Vitae</a>.
-                  	</p>
-                  </object>
                 </p>
+                <a class="about-content-link" href="/assets/cv.pdf">Download CV</a>
               </div>
             {{/animated-if}}
             {{#animated-if (and (not this.isTileView) (eq this.currentSection 'career')) duration=1000 use=this.transitionFade}}
@@ -706,13 +699,13 @@
       </div>
 
       <div class="links mobile">
-       <a class="link" href="mailto:sgoneill89@gmail.com">
+       <a class="link mobile" href="mailto:sgoneill89@gmail.com">
          <img class="gmail-icon mobile" src="images/gmail.png">
        </a>
-       <a class="link" href="https://github.com/ShaneON">
+       <a class="link mobile" href="https://github.com/ShaneON">
          <img class="github-icon mobile" src="images/github.png">
        </a>
-       <a class="link" href="https://linkedin.com/in/shane-o-neill-7b133511b">
+       <a class="link mobile" href="https://linkedin.com/in/shane-o-neill-7b133511b">
          <img class="linkedin-icon mobile" src="images/linkedin.png">
        </a>
       </div>
