--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -307,6 +307,7 @@ body {
   display: flex;
   justify-content: center;
   width: 100%;
+  max-height: 60%;
 }
 
 .about-content-animated-container.mobile {
