--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -245,13 +245,12 @@ body {
 }
 
 .about-tile-img-text-1.mobile {
-  width: 180px;
-  top: 50px;
-  right: 160px;
+  top: 50%;
+  right: 48%;
+  width: 49%;
 }
 
 .about-tile-img-text-2 {
-  text-align: center;
   position: absolute;
   top: 20%;
   right: 45%;
@@ -259,13 +258,12 @@ body {
 }
 
 .about-tile-img-text-2.mobile {
-  width: 200px;
-  top: 60px;
-  right: 140px;
+  top: 56%;
+  right: 42%;
+  width: 56%;
 }
 
 .about-tile-img-text-3 {
-  text-align: center;
   position: absolute;
   top: 20%;
   right: 26%;
@@ -273,13 +271,12 @@ body {
 }
 
 .about-tile-img-text-3.mobile {
-  width: 260px;
-  top: 60px;
-  right: 80px;
+  top: 56%;
+  right: 23%;
+  width: 74%;
 }
 
 .about-tile-img-text-4 {
-  text-align: center;
   position: absolute;
   top: 20%;
   right: 43%;
@@ -287,9 +284,9 @@ body {
 }
 
 .about-tile-img-text-4.mobile {
-  width: 200px;
-  top: 60px;
-  right: 140px;
+  top: 56%;
+  right: 42%;
+  width: 56%;
 }
 
 .about-tile-img-bg {
