--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -509,6 +509,7 @@ body {
   background-color: #403e3e;
   width: 100%;
   border-radius: 10px 10px 0 0;
+  overflow: hidden;
 }
 
 .slideshow-heading.mobile {
