--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -83,7 +83,7 @@
                   <br><br>
                   He has worked on backend and database infrastructure for large banking multinationals.
                   <br><br>
-                  He has also done many smaller projects (frontend + backend) for individuals and startup companies;
+                  He has also done many smaller projects (frontend + backend) for individuals and startup companies.
                 </p>
             </div>
             </div>
@@ -111,11 +111,9 @@
                 <img class="about-content-header-text" src="/images/awards.png" width="100px">
               </div>
               <div class="about-content-container">
-                <img class="about-content-img" src="/images/openet.jpeg" width="300px">
+                <img class="about-content-img" src="/images/openet.jpeg" width="250px">
                 <p class="about-content-text">
                   Shane was awarded Most Innovative Project at the Dublin City University 2017 final year project expo.
-                  <br><br>
-                  Shane has built frontend applications for the largest salon booking software in the world.
                   <br><br>
                   His project was a wearable technology navigation system for cyclists consisting of an android app and an arduino which was fitted to a helmet, using a light system to direct the cyclist to their destination.
                   <br><br>
