--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -117,7 +117,7 @@
                   <br><br>
                   His project was a wearable technology navigation system for cyclists consisting of an android app and an arduino which was fitted to a helmet, using a light system to direct the cyclist to their destination.
                   <br><br>
-                  Shane received first class honours for the project as well as a new Ipad.
+                  Shane received first class honours for the project as well as a new Ipad, presented to him by the CEO of Openet, Joe Hogan.
                 </p>
               </div>
             </div>
