--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -430,8 +430,8 @@
                     He has experience working in frontend, backend, android and desktop development.
                     <br><br>
                     He is passionate about building beautiful, responsive, and robust web applications.
+                    <a class="about-content-link" href="/assets/cv.pdf">Download CV</a>
                   </p>
-                  <a class="about-content-link" href="/assets/cv.pdf">Download CV</a>
                 </div>
               {{/animated-if}}
               {{#animated-if (eq this.currentSection 'career') duration=1000 use=this.transitionFade}}
@@ -501,38 +501,40 @@
       </div>
 
       <div class="tech-container">
-        <div class="thumbnail-row mobile">
-          <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 0}}>
-            <img class="thumbnail-img" src="/images/html-css-js.png" width="45px" height="20px">
+        <div class="thumbnail-container mobile">
+          <div class="thumbnail-row mobile">
+            <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 0}}>
+              <img class="thumbnail-img" src="/images/html-css-js.png" width="45px" height="20px">
+            </div>
+            <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 1}}>
+              <img class="thumbnail-img" src="/images/ember-icon.svg" width="65px" height="65px">
+            </div>
+            <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 2}}>
+              <img class="thumbnail-img" src="/images/spring.png" width="90px" height="65px">
+            </div>
+            <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 3}}>
+              <img class="thumbnail-img" src="/images/nodejs.png" width="65px" height="50px">
+            </div>
+            <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 4}}>
+              <img class="thumbnail-img" src="/images/android.png" width="65px" height="65px">
+            </div>
           </div>
-          <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 1}}>
-            <img class="thumbnail-img" src="/images/ember-icon.svg" width="65px" height="65px">
-          </div>
-          <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 2}}>
-            <img class="thumbnail-img" src="/images/spring.png" width="90px" height="65px">
-          </div>
-          <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 3}}>
-            <img class="thumbnail-img" src="/images/nodejs.png" width="65px" height="50px">
-          </div>
-          <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 4}}>
-            <img class="thumbnail-img" src="/images/android.png" width="65px" height="65px">
-          </div>
-        </div>
-        <div class="thumbnail-row mobile">
-          <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 5}}>
-            <img class="thumbnail-img" src="/images/docker.png" width="40px" height="40px">
-          </div>
-          <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 6}}>
-            <img class="thumbnail-img" src="/images/kubernetes.png" width="30px" height="30px">
-          </div>
-          <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 7}}>
-            <img class="thumbnail-img" src="/images/sql.png" width="40px" height="40px">
-          </div>
-          <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 8}}>
-            <img class="thumbnail-img" src="/images/git.png" width="40px" height="20px">
-          </div>
-          <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 9}}>
-            <img class="thumbnail-img" src="/images/mongo.png" width="50px" height="20px">
+          <div class="thumbnail-row mobile">
+            <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 5}}>
+              <img class="thumbnail-img" src="/images/docker.png" width="40px" height="40px">
+            </div>
+            <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 6}}>
+              <img class="thumbnail-img" src="/images/kubernetes.png" width="30px" height="30px">
+            </div>
+            <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 7}}>
+              <img class="thumbnail-img" src="/images/sql.png" width="40px" height="40px">
+            </div>
+            <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 8}}>
+              <img class="thumbnail-img" src="/images/git.png" width="40px" height="20px">
+            </div>
+            <div class="thumbnail-item mobile" onclick={{action "changeSlideshowImage" 9}}>
+              <img class="thumbnail-img" src="/images/mongo.png" width="50px" height="20px">
+            </div>
           </div>
         </div>
         <div class="slideshow mobile">
