--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -419,7 +419,7 @@
             <AnimatedContainer class="about-content-animated-container mobile">
               {{#animated-if (eq this.currentSection 'about') duration=1000 use=this.transitionFade}}
                 <div class="about-content mobile">
-                  <div class="about-content-container mobile">
+                  <div class="about-content-img-container mobile">
                     <img class="about-content-img mobile" src="/images/me.jpg" width="120px" height="120px">
                     <div class="close" onclick={{action "closeAbout"}}></div>
                   </div>
@@ -436,7 +436,7 @@
               {{/animated-if}}
               {{#animated-if (eq this.currentSection 'career') duration=1000 use=this.transitionFade}}
                 <div class="about-content mobile">
-                  <div class="about-content-container">
+                  <div class="about-content-img-container mobile">
                     <img class="about-content-img mobile" src="/images/working.jpg" width="180px" height="140px">
                     <div class="close" onclick={{action "closeAbout"}}></div>
                   </div>
@@ -454,7 +454,7 @@
               {{/animated-if}}
               {{#animated-if (eq this.currentSection 'education') duration=1000 use=this.transitionFade}}
                 <div class="about-content mobile">
-                  <div class="about-content-container">
+                  <div class="about-content-img-container mobile">
                     <img class="about-content-img mobile" src="/images/dcu.jpg" width="200px" height="160px">
                     <div class="close" onclick={{action "closeAbout"}}></div>
                   </div>
@@ -470,15 +470,13 @@
               {{/animated-if}}
               {{#animated-if (eq this.currentSection 'awards') duration=1000 use=this.transitionFade}}
                 <div class="about-content mobile">
-                  <div class="about-content-container mobile">
+                  <div class="about-content-img-container mobile">
                     <img class="about-content-img mobile" src="/images/openet.jpeg" width="200px" height="160px">
                     <div class="close" onclick={{action "closeAbout"}}></div>
                   </div>
 
                   <p class="about-content-text mobile">
                     Shane was awarded Most Innovative Project at the Dublin City University 2017 final year project expo.
-                    <br><br>
-                    Shane has built frontend applications for the largest salon booking software in the world.
                     <br><br>
                     His project was a wearable technology navigation system for cyclists consisting of an android app and an arduino which was fitted to a helmet, using a light system to direct the cyclist to their destination.
                     <br><br>
