fixed img sizes

--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -56,7 +56,7 @@
                 <img class="about-content-header-text" src="/images/about.png" width="80px">
               </div>
               <div class="about-content-container">
-                <img class="about-content-img" src="/images/me.jpg" width="200px">
+                <img class="about-content-img" src="/images/me.jpg" width="200px" height="200px">
                 <p class="about-content-text">
                   Shane is a freelance software and web developer from Dublin, Ireland.
                   <br><br>
@@ -75,7 +75,7 @@
                 <img class="about-content-header-text" src="/images/career.png" width="100px">
               </div>
               <div class="about-content-container">
-                <img class="about-content-img" src="/images/working.jpg" width="300px">
+                <img class="about-content-img" src="/images/working.jpg" width="300px" height="200px">
                 <p class="about-content-text">
                   Shane has experience in both small startups and large corporations, working with a wide range of technologies.
                   <br><br>
@@ -94,7 +94,7 @@
                 <img class="about-content-header-text" src="/images/education.png" width="120px">
               </div>
               <div class="about-content-container">
-                <img class="about-content-img" src="/images/dcu.jpg" width="300px">
+                <img class="about-content-img" src="/images/dcu.jpg" width="300px" height="200px">
                 <p class="about-content-text">
                   Shane graduated from Dublin City University in 2017 with an honours degree in Computer Science.
                   <br><br>
@@ -111,7 +111,7 @@
                 <img class="about-content-header-text" src="/images/awards.png" width="100px">
               </div>
               <div class="about-content-container">
-                <img class="about-content-img" src="/images/openet.jpeg" width="250px">
+                <img class="about-content-img" src="/images/openet.jpeg" width="250px" height="200px">
                 <p class="about-content-text">
                   Shane was awarded Most Innovative Project at the Dublin City University 2017 final year project expo.
                   <br><br>
