--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -383,32 +383,32 @@
     <div class="content mobile">
       <div class="about-container">
         <div class="about-tiles mobile">
-          <AnimatedContainer class="about-tile-animated-container mobile">
-            {{#animated-if (or this.isTileView (eq this.currentSection 'about')) use=this.transitionFade}}
+          <AnimatedContainer class="about-tile-animated-container mobile {{if this.isTileView "closed"}}">
+            {{#animated-if (or this.isTileView (eq this.currentSection 'about')) duration=900 use=this.transitionFade}}
               <div class="about-tile mobile" onclick={{action "tileSelectedMobile" 'about'}}>
                 <img class="about-tile-img-bg mobile" src="/images/code.jpg">
                 <img class="about-tile-img-text-1 mobile" src="/images/about.png">
               </div>
             {{/animated-if}}
           </AnimatedContainer>
-          <AnimatedContainer class="about-tile-animated-container mobile">
-            {{#animated-if (or this.isTileView (eq this.currentSection 'career')) use=this.transitionFade}}
+          <AnimatedContainer class="about-tile-animated-container mobile {{if this.isTileView "closed"}}">
+            {{#animated-if (or this.isTileView (eq this.currentSection 'career')) duration=900 use=this.transitionFade}}
               <div class="about-tile mobile" onclick={{action "tileSelectedMobile" 'career'}}>
                 <img class="about-tile-img-bg mobile" src="/images/career.jpg">
                 <img class="about-tile-img-text-2 mobile" src="/images/career.png">
               </div>
             {{/animated-if}}
           </AnimatedContainer>
-          <AnimatedContainer class="about-tile-animated-container mobile">
-            {{#animated-if (or this.isTileView (eq this.currentSection 'education')) use=this.transitionFade}}
+          <AnimatedContainer class="about-tile-animated-container mobile {{if this.isTileView "closed"}}">
+            {{#animated-if (or this.isTileView (eq this.currentSection 'education')) duration=900 use=this.transitionFade}}
               <div class="about-tile mobile" onclick={{action "tileSelectedMobile" 'education'}}>
                 <img class="about-tile-img-bg mobile" src="/images/education.jpg">
                 <img class="about-tile-img-text-3 mobile" src="/images/education.png">
               </div>
             {{/animated-if}}
           </AnimatedContainer>
-          <AnimatedContainer class="about-tile-animated-container mobile">
-            {{#animated-if (or this.isTileView (eq this.currentSection 'awards')) use=this.transitionFade}}
+          <AnimatedContainer class="about-tile-animated-container mobile {{if this.isTileView "closed"}}">
+            {{#animated-if (or this.isTileView (eq this.currentSection 'awards')) duration=900 use=this.transitionFade}}
               <div class="about-tile mobile" onclick={{action "tileSelectedMobile" 'awards'}}>
                 <img class="about-tile-img-bg mobile" src="/images/awards.jpg">
                 <img class="about-tile-img-text-4 mobile" src="/images/awards.png">
